--- a/Projecthtml/index.html
+++ b/Projecthtml/index.html
@@ -75,7 +75,6 @@
             background-color: white;
         }
 
-
         .hero {
             width: 100vw;
             height: 90vh;
@@ -93,8 +92,6 @@
             background: #ffee0000;
 
         }
-
-
         .text-title {
             font-size: 4em;
             color: blueviolet;
@@ -115,6 +112,7 @@
 
         .button-explore {
             margin-top: 40px;
+            display: flex;
         }
 
         .btn-about {
@@ -435,6 +433,13 @@
             width: 450px;
             height: 550px;
         }
+
+        .btn-readmore{
+            margin-top: 5px;
+        }
+        .btn-readmore:hover{
+            color: blueviolet;
+        }
         
 
 
@@ -571,7 +576,7 @@
                 </div>
                 
             </div>
-
+jjjj
         </div>
     </div>
 </body>
