--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
     <div class="contact-page">
         <div class="contact-tittle">
             <div class="tittle-text">Contact Me</div>
-            <div class="tittle-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, nesciunt.</div>
+            <div class="tittle-info">contact me for need information</div>
         </div>
         <div class="contact-map">
             <iframe
