--- a/figma.html
+++ b/figma.html
@@ -13,6 +13,7 @@
             margin: 0;
             padding: 0;
             font-family: 'Poppins';
+            overflow-x: hidden;
         }
 
         .navbar {
@@ -576,7 +577,6 @@
                 </div>
                 
             </div>
-jjjj
         </div>
     </div>
 </body>
