--- a/app.html
+++ b/app.html
@@ -6,17 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
 <body>
-    <!--- <h1 id="judul"></h1>
+    <h3>nama santri :</h3>
+     <!-- <h1 id="judul"></h1>
     <p id="paragraf"></p>
 
     <button type="button" id="siang" onclick="document.getElementById('myImage').src='https://cdn.pnghd.pics/data/444/gambar-matahari-png-11.png'">Siang</button>
     <button type="button" id="malam" onclick="document.getElementById('myImage').src='https://png.pngtree.com/png-clipart/20220220/original/pngtree-3d-ramadan-moon-ornament-png-image_7271928.png'">Malam</button>
 
     <div class="container"></div>
-
-
     <script>
         //console log untuk menampilkan data 
         console. log("saya sedang belajar js"); 
@@ -30,11 +28,8 @@
     <button type="button" onclick="document.getElementById('icon').innerText = '😂'">senang</button>
     <button type="button" onclick="document.getElementById('icon').innerText = '😭'">sedih</button>
 </body> -->
-
     <!-- <h1>halo nama saya</h1>
     <button type="button" id="btn-saya">klik ini buat tau</button> -->
-    
     <script src="jsfundamental.js"></script>
 </body>
-
 </html>
